--- a/XamarinGuy/XamarinGuy.Android/XamarinGuy.Android.csproj
+++ b/XamarinGuy/XamarinGuy.Android/XamarinGuy.Android.csproj
@@ -458,5 +458,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\userimage.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_humans.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\screen.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\CurvedMask.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
