Создана страница загрузки

--- a/XamarinGuy/XamarinGuy/XamarinGuy.csproj
+++ b/XamarinGuy/XamarinGuy/XamarinGuy.csproj
@@ -38,6 +38,9 @@
     <EmbeddedResource Update="Views\HumanPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="LoadingMainPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\Page1.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
